<resources>
    <string name="app_name">AutoMus</string>
    <string name="navigation_library">Library</string>
    <string name="navigation_browse">Browse</string>
    <string name="navigation_search">Search</string>
    <string name="album_art">Album Art</string>
    <string name="track_title">Track Title</string>
    <string name="track_artist">Track Artist</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="song_title">Song Title</string>
    <string name="song_artist">Song Artist</string>
    <string name="like">Like</string>
    <string name="options">Options</string>
</resources>
