<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        android:menu="@menu/bottom_navigation_menu" />

    <RelativeLayout
        android:id="@+id/now_playing_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_navigation"
        android:background="@color/now_playing_bar_background"
        android:padding="16dp">

        <ImageView
            android:id="@+id/album_art"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/album_art" />

        <TextView
            android:id="@+id/track_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/album_art"
            android:layout_marginStart="8dp"
            android:text="@string/track_title"
            android:textColor="@color/track_title_color"
            android:textSize="16sp"
            android:maxLines="1"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/track_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/track_title"
            android:layout_toEndOf="@id/album_art"
            android:layout_marginStart="8dp"
            android:text="@string/track_artist"
            android:textColor="@color/track_artist_color"
            android:textSize="14sp"
            android:maxLines="1"
            android:ellipsize="end" />

        <ImageButton
            android:id="@+id/play_pause_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/play_pause"
            android:src="@drawable/ic_play_pause" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_toStartOf="@id/play_pause_button"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_next" />

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_toStartOf="@id/next_button"
            android:contentDescription="@string/previous"
            android:src="@drawable/ic_previous" />
    </RelativeLayout>
</RelativeLayout>
